[gd_scene load_steps=15 format=2]

[ext_resource path="res://weapons/missile/missile.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/sounds/591149__mrfossy__mulch-wind-3.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/materials/vehicles/car_grill.tres" type="Material" id=3]
[ext_resource path="res://assets/textures/dot.png" type="Texture" id=4]
[ext_resource path="res://assets/audio/sounds/151858__nhmwretched__missile-firing-fl.mp3" type="AudioStream" id=6]

[sub_resource type="CapsuleShape" id=26]
radius = 1.01069

[sub_resource type="CapsuleMesh" id=25]

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.0729927, 0.248175, 0.510949, 1 )
colors = PoolColorArray( 0.983398, 1, 0, 1, 1, 0, 0, 0.823529, 0.0431373, 0.0392157, 0.0392157, 0.462745, 0.0541921, 0.0503817, 0.0503817, 0.249735, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=33]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 0.263018 ), 0.0, 6.47934, 0, 0, Vector2( 0.1125, 0.917563 ), 0.207792, 0.207792, 0, 0, Vector2( 0.85, 0.826654 ), -0.700337, -0.700337, 0, 0, Vector2( 1, 0.0175631 ), -0.118322, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=34]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=13]
direction = Vector3( 0, 0, 1 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 0.5
damping = 10.0
scale_curve = SubResource( 34 )
color_ramp = SubResource( 33 )

[sub_resource type="SpatialMaterial" id=35]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 4 )

[sub_resource type="QuadMesh" id=36]
material = SubResource( 35 )

[node name="Missile" type="Spatial" groups=["missile"]]
script = ExtResource( 1 )

[node name="Body" type="RigidBody" parent="."]
mass = 20.0
contacts_reported = 2
contact_monitor = true

[node name="CollisionShape" type="CollisionShape" parent="Body"]
transform = Transform( 0.140476, 0, 0, 0, 0.126892, 0, 0, 0, 0.315844, 0, 0, 0 )
shape = SubResource( 26 )

[node name="MeshInstance" type="MeshInstance" parent="Body"]
transform = Transform( 0.142666, 0, 0, 0, -1.32541e-08, -0.0807597, 0, 0.462283, -5.38198e-09, 0, 0, 0 )
mesh = SubResource( 25 )
skeleton = NodePath("../..")
material/0 = ExtResource( 3 )

[node name="ParticlesThrust" type="Particles" parent="."]
transform = Transform( 0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0.533099 )
amount = 50
lifetime = 1.5
preprocess = 1.14
local_coords = false
process_material = SubResource( 13 )
draw_pass_1 = SubResource( 36 )

[node name="RayCastDown" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0793603, -0.630978 )
enabled = true

[node name="RayCastForward" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, -0.00581194, -0.999983, 0, 0.999983, -0.00581194, 0, 0, -0.630978 )
enabled = true
cast_to = Vector3( 0, -10, 0 )

[node name="RayCastForwardDown" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 0.0930483, -0.995662, 0, 0.995662, 0.0930483, 0, -0.16439, -0.630978 )
enabled = true
cast_to = Vector3( 0, -10, 0 )

[node name="RayCastForwardUp" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, -0.114226, -0.993455, 0, 0.993455, -0.114226, 0, 0.140695, -0.630978 )
enabled = true
cast_to = Vector3( 0, -10, 0 )

[node name="RayCastForwardRight" type="RayCast" parent="."]
transform = Transform( 0.993093, -0.117327, 0.000681912, 0, -0.00581194, -0.999983, 0.117329, 0.993076, -0.0057718, 0.160343, 0, -0.630978 )
enabled = true
cast_to = Vector3( 0, -10, 0 )

[node name="RayCastForwardLeft" type="RayCast" parent="."]
transform = Transform( 0.993015, 0.117986, -0.000685739, 0, -0.00581194, -0.999983, -0.117988, 0.992998, -0.00577134, -0.157368, 0, -0.630978 )
enabled = true
cast_to = Vector3( 0, -10, 0 )

[node name="LaunchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="FlyingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="ThrustLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.780041 )
visible = false
light_color = Color( 1, 0.305882, 0, 1 )
light_energy = 4.0
shadow_enabled = true

[connection signal="body_entered" from="Body" to="." method="_on_Body_body_entered"]
